# cloud_sptheme2

./: .gitattributes  .gitignore  README  pyproject.toml
cloud_sptheme/: __init__.py
cloud_sptheme/ext/: auto_redirect.py  index_styling.py
cloud_sptheme/tests/: test_ext_relbar_toc.py
cloud_sptheme/themes/cloud/: theme.conf
cloud_sptheme/themes/cloud/static/: cloud.js_t
